# video-reader-rs-next

./: Cargo.toml  README.md  pyproject.toml
python/video_reader/: __init__.py  __init__.pyi
scripts/: benchmark_long_video.py  benchmark_speed_memory.py  decoding_accuracy_test.py  visualize_video_frametype_pts_dts_info.py
scripts/qwen_vl_utils_next/: __init__.py  process_vision_info.py
src/: filter.rs  lib.rs  reader.rs
